Color graph entrypoints and fix graph info z-index

--- a/cli/slipbox/data/base.css
+++ b/cli/slipbox/data/base.css
@@ -18,14 +18,6 @@ body {
   display: none;
 }
 
-h1 {
-  font-family: Courier;
-}
-
-h2 {
-  font-family: Courier;
-}
-
 /* Layout */
 
 .sidebar {
@@ -41,7 +33,7 @@ h2 {
   left: 0;
   height: 100vh;
   box-shadow: 2px 0 2px #aaaaaa;
-  z-index: 1;
+  z-index: 2;
 
   animation-duration: 0.2s;
   animation-name: slidein;
@@ -69,7 +61,7 @@ h2 {
   font-size: 1.75rem;
   padding: 0 0.25em;
   border-radius: 5px;
-  z-index: 2;
+  z-index: 3;
 }
 
 #primary-label:hover {
@@ -84,6 +76,7 @@ h2 {
   position: fixed;
   bottom: 0;
   right: 0;
+  z-index: 1;
 }
 
 .title {
@@ -130,10 +123,6 @@ h2 {
   outline: none;
   border: none;
   background-color: transparent;
-}
-
-.title {
-  font-family: Courier;
 }
 
 .card {
