--- a/cli/slipbox/data/style.css
+++ b/cli/slipbox/data/style.css
@@ -36,14 +36,6 @@ nav ul {
   width: 100%;
   height: 90vh;
 }
-.slipbox-graph-info {
-  bottom: 0;
-  right: 0;
-  padding: 20px;
-  position: fixed;
-  max-width: 30em;
-  z-index: 1;
-}
 .flashcard-prompt {
   text-align: center;
 }
